[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-agentic-rag"
version = "0.1.0"
description = "Agentic RAG with hybrid search (dense + sparse)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langchain_anthropic",
    "langchain_huggingface",
    "langchain_chroma",
    "langchain_text_splitters",
    "pymilvus",
    "numpy",
    "python-dotenv",
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["my_agentic_rag*"]
